--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <span class="text-primary">Wickersham</span>
           </h1>
           <div class="subheading mb-5"> Boston, MA 02127 · (508) 560-7433 ·
-            <a href="mailto:name@email.com">cyrusw213@gmail.com</a>
+            <a href="mailto:cyrusw213@gmail.com">cyrusw213@gmail.com</a>
           </div>
           <p class="mb-5">I am a software engineer transitioning from 3 progressive years as a program manager in tech. I have experience scaling up and managing teams of 10+, working to solve complex software issues, and working directly with customers. </p>
           <ul class="list-inline list-social-icons mb-0">
