--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
@@ -161,6 +164,69 @@
           </div>
         </div>
       </section>
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+        <div class="my-auto">
+          <h2 class="mb-5">Projects</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Weather Side by Side</h3>
+              <div class="subheading mb-3"><a href="https://github.com/cyrusw213/Weather_App">GitHub</a> | <a href="https://timely-florentine-3ec0a2.netlify.app/">Deployed Project</a></div>
+              <div>Techonologies Used: HTML, CSS, JavaScript, AJAX </div>
+              <br>
+              <p>An app designed to let users compare weather forecasts in up to four different locations.
+                Employed functionality via JavaScript using event listeners.
+                Utilized CSS grids and Flexbox to ensure site responsiveness.
+                </p>
+            </div>
+            <div class="resume-date text-md-right">
+            </div>
+          </div>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Wellness App</h3>
+              <div class="subheading mb-3"><a href="https://github.com/cyrusw213/wellness-app">GitHub</a> | <a href="https://polar-savannah-40170.herokuapp.com/">Deployed Project</a></div>
+              <div>Technologies Used: HTML, CSS, Express, Node, EJS, Mongoose, MongoDB, Bootstrap</div>
+              <br>
+              <p>An app designed to let users track daily wellness activities. 
+                Created and designed a full-stack app following full RESTful and providing CRUD functionality.
+                Saved user input through server-side Mongoose database.
+                Rendered front-end with EJS templates.
+
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+            </div>
+          </div>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">The Spirits Within</h3>
+              <div class="subheading mb-3"><a href="https://github.com/cyrusw213/whiskey-front">GitHub</a> | <a href="https://spirit-within.netlify.app/">Deployed Project</a></div>
+              <div>Technologies Used: HTML, CSS, Express, React, Node, JavaScript, Mongoose, MongoDB, Bootstrap</div>
+              <br>
+              <p>This app enables users to browse through the 99 most popular whiskeys (per Wikiliq). The user can sort by whiskey type or view them all in one master list. The user also has the ability to rate each whiskey type on a scale of 1-5. If the user wishes to go even further they have the ability to mark all of their favorite whiskeys which will then be added to a favorite page.
+                I was the release manager on this group project, ensuring smooth GitHub commits and resolving any merge conflicts. I also worked on the backend's routes and assisted in the react work on the front end. 
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+            </div>
+          </div>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">My Reads</h3>
+              <div class="subheading mb-3"><a href="">GitHub</a> | <a href="">Deployed Project</a></div>
+              <div>Techonologies Used: Python, django, HTML, CSS, Materialize, SQL, JavaScript, Heroku</div>
+              <br>
+              <p>
+                My Reads allows users to keep track of books they've read and books they want to read in one app.
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+            </div>
+          </div>
+        </div>
+      </section>
+      
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
