--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Weather Side by Side</h3>
+              <span class="d-none d-lg-block">
+                <img class="img-fluid img-profile mx-auto mb-2" src="img/weather.png" alt="">
+              </span>
               <div class="subheading mb-3"><a href="https://github.com/cyrusw213/Weather_App">GitHub</a> | <a href="https://timely-florentine-3ec0a2.netlify.app/">Deployed Project</a></div>
               <div>Techonologies Used: HTML, CSS, JavaScript, AJAX </div>
               <br>
@@ -185,6 +188,9 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Wellness App</h3>
+              <span class="d-none d-lg-block">
+                <img class="img-fluid img-profile mx-auto mb-2" src="img/wellness.png" alt="">
+              </span>
               <div class="subheading mb-3"><a href="https://github.com/cyrusw213/wellness-app">GitHub</a> | <a href="https://polar-savannah-40170.herokuapp.com/">Deployed Project</a></div>
               <div>Technologies Used: HTML, CSS, Express, Node, EJS, Mongoose, MongoDB, Bootstrap</div>
               <br>
@@ -201,6 +207,9 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">The Spirits Within</h3>
+              <span class="d-none d-lg-block">
+                <img class="img-fluid img-profile mx-auto mb-2" src="img/whiskey.png" alt="">
+              </span>
               <div class="subheading mb-3"><a href="https://github.com/cyrusw213/whiskey-front">GitHub</a> | <a href="https://spirit-within.netlify.app/">Deployed Project</a></div>
               <div>Technologies Used: HTML, CSS, Express, React, Node, JavaScript, Mongoose, MongoDB, Bootstrap</div>
               <br>
@@ -214,7 +223,10 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">My Reads</h3>
-              <div class="subheading mb-3"><a href="">GitHub</a> | <a href="">Deployed Project</a></div>
+              <span class="d-none d-lg-block">
+                <img class="img-fluid img-profile mx-auto mb-2" src="img/myreads.png" alt="">
+              </span>
+              <div class="subheading mb-3"><a href="https://github.com/cyrusw213/my_reads">GitHub</a> | <a href="https://stark-dawn-97514.herokuapp.com/">Deployed Project</a></div>
               <div>Techonologies Used: Python, django, HTML, CSS, Materialize, SQL, JavaScript, Heroku</div>
               <br>
               <p>
