finished projects section

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Weather Side by Side</h3>
               <span class="d-none d-lg-block">
-                <img class="img-fluid img-profile mx-auto mb-2" src="img/weather.png" alt="">
+                <img class="img-fluid img-profile mx-auto mb-2" src="img/weather.jpg" alt="">
               </span>
               <div class="subheading mb-3"><a href="https://github.com/cyrusw213/Weather_App">GitHub</a> | <a href="https://timely-florentine-3ec0a2.netlify.app/">Deployed Project</a></div>
               <div>Techonologies Used: HTML, CSS, JavaScript, AJAX </div>
@@ -189,7 +189,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Wellness App</h3>
               <span class="d-none d-lg-block">
-                <img class="img-fluid img-profile mx-auto mb-2" src="img/wellness.png" alt="">
+                <img class="img-fluid img-profile mx-auto mb-2" src="img/welness.jpg" alt="">
               </span>
               <div class="subheading mb-3"><a href="https://github.com/cyrusw213/wellness-app">GitHub</a> | <a href="https://polar-savannah-40170.herokuapp.com/">Deployed Project</a></div>
               <div>Technologies Used: HTML, CSS, Express, Node, EJS, Mongoose, MongoDB, Bootstrap</div>
@@ -208,7 +208,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">The Spirits Within</h3>
               <span class="d-none d-lg-block">
-                <img class="img-fluid img-profile mx-auto mb-2" src="img/whiskey.png" alt="">
+                <img class="img-fluid img-profile mx-auto mb-2" src="img/whiskey.jpg" alt="">
               </span>
               <div class="subheading mb-3"><a href="https://github.com/cyrusw213/whiskey-front">GitHub</a> | <a href="https://spirit-within.netlify.app/">Deployed Project</a></div>
               <div>Technologies Used: HTML, CSS, Express, React, Node, JavaScript, Mongoose, MongoDB, Bootstrap</div>
@@ -224,7 +224,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">My Reads</h3>
               <span class="d-none d-lg-block">
-                <img class="img-fluid img-profile mx-auto mb-2" src="img/myreads.png" alt="">
+                <img class="img-fluid img-profile mx-auto mb-2" src="img/myreads.jpg" alt="">
               </span>
               <div class="subheading mb-3"><a href="https://github.com/cyrusw213/my_reads">GitHub</a> | <a href="https://stark-dawn-97514.herokuapp.com/">Deployed Project</a></div>
               <div>Techonologies Used: Python, django, HTML, CSS, Materialize, SQL, JavaScript, Heroku</div>
